--- a/react_udemy_academind/tutorial.html
+++ b/react_udemy_academind/tutorial.html
@@ -12,11 +12,11 @@
 
     <p>
         <script>
-            const myName = 'lowo';
-            console.log(myName);
+const multiply = (num) =>{
+    return num *24;
+}
 
-            myName = 'dayo';
-            console.log(myName);
+console.log(multiply(4))
         </script>
     </p>
 </body>
