--- a/react_udemy_academind/tutorial.html
+++ b/react_udemy_academind/tutorial.html
@@ -12,11 +12,9 @@
 
     <p>
         <script>
-const multiply = (num) =>{
-    return num *24;
-}
+{name} = {name: 'Oyelowo', age: 23}
 
-console.log(multiply(4))
+console.log(name);
         </script>
     </p>
 </body>
